--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"generate": "npx tsx src/data/gallery-generator.ts src/gallery"
 	},
 	"devDependencies": {
-		"@tailwindcss/typography": "^0.5.16",
-		"@tailwindcss/vite": "^4.0.14",
+		"@astrojs/tailwind": "^6.0.2",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/js-yaml": "^4.0.9",
 		"@types/justified-layout": "^4.1.4",
 		"@types/node": "^22.14.0",
@@ -22,6 +22,7 @@
 		"@typescript-eslint/parser": "^8.31.0",
 		"astro": "^5.8.1",
 		"astro-eslint-parser": "^1.2.2",
+		"autoprefixer": "^10.4.24",
 		"commander": "^13.1.0",
 		"eslint": "^9.25.1",
 		"eslint-plugin-astro": "^1.3.1",
@@ -35,7 +36,7 @@
 		"lucide-astro": "^0.479.0",
 		"prettier": "3.5.3",
 		"prettier-plugin-astro": "^0.14.1",
-		"tailwindcss": "^4.0.14",
+		"tailwindcss": "^3.4.19",
 		"tsx": "^4.19.3",
 		"vitest": "^3.1.1"
 	}
